# libposture

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/libposture/: filter.h  form.h  geometry.h  posture_c.h  rep_counter.h  squat_analyzer.h
src/: filter.cpp  form.cpp  geometry.cpp  posture_c.cpp  rep_counter.cpp  squat_analyzer.cpp
tests/: filter_test.cpp  form_test.cpp  geometry_test.cpp  posture_c_test.cpp  rep_counter_test.cpp  squat_analyzer_test.cpp
